--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,13 +33,16 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+          <a class="navbar-brand" href="{{base_path}}">Työnjakaja</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}">Kirjautumissivu</a></li>
+            <li><a href="{{base_path}}/tyonkohteet">Työn kohteet</a></li>
+            <li><a href="{{base_path}}/tyot">Työt</a></li>
+            <li><a href="{{base_path}}/tyokalut">Työkalut</a></li>
           </ul>
         </div>
       </div>
