--- a/app/views/suunnitelmat/tyokalu.html
+++ b/app/views/suunnitelmat/tyokalu.html
@@ -9,4 +9,5 @@
         <li><strong>ID:</strong> 000001</li>
     </ul>
 </div>
+<p><Strong>Tarkempi kuvaus:</strong> Keittiön kaapista löytyvä punainen rätti</p>
 {% endblock %}
