--- a/app/views/suunnitelmat/tyokalut.html
+++ b/app/views/suunnitelmat/tyokalut.html
@@ -17,7 +17,7 @@
     <tbody>
         <tr>
             <td>000001</td>
-            <td><a href="#">Rätti</a></td>
+            <td><a href="{{base_path}}/tyokalu">Rätti</a></td>
         </tr>
     </tbody>
 </table>
