--- a/app/views/suunnitelmat/tyonkohteet.html
+++ b/app/views/suunnitelmat/tyonkohteet.html
@@ -21,10 +21,9 @@
         <!-- Listataan pelit tähän -->
         <tr>
             <td>000001</td>
-            <td><a href="#">Jääkaappi</a></td>
+            <td><a href="{{base_path}}/tyonkohde">Jääkaappi</a></td>
             <td>10.09.2017</td>
             <td>10.09.2017</td>
-            <th><a class="btn btn-default btn-sm" href="#">Muokkaa</a></th>
         </tr>
     </tbody>
 </table>
