--- a/app/views/suunnitelmat/tyot.html
+++ b/app/views/suunnitelmat/tyot.html
@@ -21,9 +21,9 @@
         <!-- Listataan pelit tähän -->
         <tr>
             <td>000001</td>
-            <td><a href="#">Siivoa jääkaappi rätillä</a></td>
-            <td><a href="#">Jääkaappi</td>
-            <td><a href="#">Rätti</td>
+            <td><a href="{{base_path}}/tyo">Siivoa jääkaappi rätillä</a></td>
+            <td><a href="{{base_path}}/tyonkohde">Jääkaappi</td>
+            <td><a href="{{base_path}}/tyokalu">Rätti</td>
             <td><div class="checkbox">
                     <label>
                         <input type="checkbox">
