--- a/app/views/suunnitelmat/tyo.html
+++ b/app/views/suunnitelmat/tyo.html
@@ -8,8 +8,10 @@
 <!-- Tiedot tulee listana tähän -->
 <ul>
     <li><strong>ID:</strong> 000001</li>
-    <li><strong>Työn kohde:</strong> <a href="#"> Jääkaappi</a></li>
-    <li><strong>Työkalu:</strong> <a href="#"> Rätti</a></li>
+    <li><strong>Työn kohde:</strong> <a href="{{base_path}}/tyonkohde"> Jääkaappi</a></li>
+    <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokalu"> Rätti</a></li>
     <li><strong>Tehty: </strong><input type="checkbox"></li>
 </ul>
+
+<p><strong>Tarkempi kuvaus:</strong> Siivoa jääkaappi, joka löytyy keittiöstä, punaisella rätillä, joka sekin löytyy keittiöstä!</p>
 {% endblock %}
