--- a/app/views/suunnitelmat/tyonkohde.html
+++ b/app/views/suunnitelmat/tyonkohde.html
@@ -11,4 +11,6 @@
     <li><strong>Viimeisin toimenpide suoritettu:</strong> 10.09.2017</li>
     <li><strong>Lisäyspäivä:</strong> 10.09.2017</li>
   </ul>
+  
+  <p><strong>Tarkempi kuvaus:</strong> Keittiöstä löytyvä kaappi, joka pysyy viileänä. Käyttötarkoituksena ruoan säilöminen!</p>
 {% endblock %}
