Päivitetty linkkejä ja README

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -43,6 +43,7 @@
             <li><a href="{{base_path}}/tyonkohteet">Työn kohteet</a></li>
             <li><a href="{{base_path}}/tyot">Työt</a></li>
             <li><a href="{{base_path}}/tyokalut">Työkalut</a></li>
+            <li><a href="{{base_path}}/kayttajat">Käyttäjät</a></li>
           </ul>
         </div>
       </div>
