--- a/app/views/suunnitelmat/tyo.html
+++ b/app/views/suunnitelmat/tyo.html
@@ -10,7 +10,13 @@
     <li><strong>ID:</strong> 000001</li>
     <li><strong>Työn kohde:</strong> <a href="{{base_path}}/tyonkohde"> Jääkaappi</a></li>
     <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokalu"> Rätti</a></li>
+    <li><strong>Työn luoja:</strong> <a href="{{base_path}}/kayttaja"> Matti</a></li>
     <li><strong>Tehty: </strong><input type="checkbox"></li>
+</ul>
+<p><strong>Tekijät:</strong></p>
+<ul>
+        <li><a href="{{base_path}}/kayttaja"> Matti</a></li>
+        <li><a href="#"> Maija</a></li>
 </ul>
 
 <p><strong>Tarkempi kuvaus:</strong> Siivoa jääkaappi, joka löytyy keittiöstä, punaisella rätillä, joka sekin löytyy keittiöstä!</p>
