Lisätty rekisteröitymis nappulat

--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -4,5 +4,5 @@
 <p> Työnjakajalla voit helposti jakaa esimerkiksi kotitaloutesi kotityöt perheen kesken!</p>
 <p> <a href="{{base_path}}/login">Kirjaudu sisään</a> ja aloita käyttö!</p>
 
-<a href="{{base_path}}/login" class="btn btn-default">Kirjaudu</a>
+<a href="{{base_path}}/login" class="btn btn-primary">Kirjaudu</a><a href="{{base_path}}/login" class="btn btn-default">Rekisteröidy</a>
 {% endblock %}
