--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<div style="color:green">
 <h1>Tervetuloa työnjakajaan!</h1>
+</div>
 <p> Työnjakajalla voit helposti jakaa esimerkiksi kotitaloutesi kotityöt perheen kesken!</p>
 <p> <a href="{{base_path}}/login">Kirjaudu sisään</a> ja aloita käyttö!</p>
 
