--- a/app/views/suunnitelmat/kayttaja.html
+++ b/app/views/suunnitelmat/kayttaja.html
@@ -1,15 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Matti</h1>
+<div style="color:green"><h1>Matti</h1></div>
 <p>
     <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
 </p>
-<div style="color:red">
-    <ul>
-        <li><strong>ID:</strong> 000001</li>
 
-    </ul>
-</div>
 <ul>
     <li><strong>Ikä:</strong> 23</li>
 </ul>
