--- a/app/views/suunnitelmat/kayttajat.html
+++ b/app/views/suunnitelmat/kayttajat.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Näkymä - käyttäjät</h1>
+<div style="color:green"><h1>Näkymä - käyttäjät</h1></div>
 
 <p>
     <a href="#" class="btn btn-success">Lisää uusi käyttäjä</a>
