--- a/app/views/suunnitelmat/tyokalu.html
+++ b/app/views/suunnitelmat/tyokalu.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Rätti</h1>
+<div style="color:green"><h1>Rätti</h1></div>
 <p>
     <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
 </p>
-<div style="color:red">
     <ul>
-        <li><strong>ID:</strong> 000001</li>
+        <li><strong>Luomispäivä:</strong> 10.09.2017</li>
     </ul>
-</div>
+
 <p><Strong>Tarkempi kuvaus:</strong> Keittiön kaapista löytyvä punainen rätti</p>
 {% endblock %}
