--- a/app/views/suunnitelmat/tyonkohde.html
+++ b/app/views/suunnitelmat/tyonkohde.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Jääkaappi</h1>
-  <!-- Painikkeet tähän -->
-  <p>
+<div style="color:green"><h1>Jääkaappi</h1></div>
+<!-- Painikkeet tähän -->
+<p>
     <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
-  </p>
-  <!-- Tiedot tulee listana tähän -->
-  <ul>
-    <li><strong>ID:</strong> 000001</li>
+</p>
+<!-- Tiedot tulee listana tähän -->
+<ul>
     <li><strong>Viimeisin toimenpide suoritettu:</strong> 10.09.2017</li>
     <li><strong>Lisäyspäivä:</strong> 10.09.2017</li>
-  </ul>
-  
-  <p><strong>Tarkempi kuvaus:</strong> Keittiöstä löytyvä kaappi, joka pysyy viileänä. Käyttötarkoituksena ruoan säilöminen!</p>
+</ul>
+
+<p><strong>Tarkempi kuvaus:</strong> Keittiöstä löytyvä kaappi, joka pysyy viileänä. Käyttötarkoituksena ruoan säilöminen!</p>
 {% endblock %}
