--- a/app/views/suunnitelmat/tyot.html
+++ b/app/views/suunnitelmat/tyot.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Näkymä - aktiiviset työt</h1>
+<div style="color:green"><h1>Näkymä - aktiiviset työt</h1></div>
 
 <p>
     <a href="#" class="btn btn-success">Lisää uusi työ</a>
