--- a/app/views/suunnitelmat/tyokalut.html
+++ b/app/views/suunnitelmat/tyokalut.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Näkymä - Työkalut</h1>
+<div style="color:green"><h1>Näkymä - Työkalut</h1></div>
 
 <p>
     <a href="#" class="btn btn-success">Lisää työkalu</a>
