--- a/app/views/suunnitelmat/tyonkohteet.html
+++ b/app/views/suunnitelmat/tyonkohteet.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Näkymä - Työn kohteet</h1>
+<div style="color:green"><h1>Näkymä - Työn kohteet</h1></div>
 
 <p>
     <a href="#" class="btn btn-success">Lisää työn kohde</a>
