--- a/app/views/suunnitelmat/tyokalu.html
+++ b/app/views/suunnitelmat/tyokalu.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div style="color:green"><h1>Rätti</h1></div>
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
+    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyokaluMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
     <ul>
         <li><strong>Luomispäivä:</strong> 10.09.2017</li>
