--- a/app/views/suunnitelmat/tyonkohde.html
+++ b/app/views/suunnitelmat/tyonkohde.html
@@ -3,7 +3,7 @@
 <div style="color:green"><h1>Jääkaappi</h1></div>
 <!-- Painikkeet tähän -->
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
+    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyonkohdeMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
 <!-- Tiedot tulee listana tähän -->
 <ul>
