--- a/app/views/suunnitelmat/kayttaja.html
+++ b/app/views/suunnitelmat/kayttaja.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div style="color:green"><h1>Matti</h1></div>
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
+    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/kayttajaMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
 
 <ul>
