--- a/app/views/suunnitelmat/tyokaluMuokkaus.html
+++ b/app/views/suunnitelmat/tyokaluMuokkaus.html
@@ -3,11 +3,11 @@
 <form>
     <div class="form-group">
         <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" id="kuvaus" placeholder="Jääkaappi">
+        <input type="Text" class="form-control" id="kuvaus" placeholder="Rätti">
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Keittiöstä löytyvä kaappi, joka pysyy viileänä. Käyttötarkoituksena ruoan säilöminen!">
+        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Keittiön kaapista löytyvä punainen rätti">
     </div>    
     
     <button type="submit" class="btn btn-default">Muuta</button>
