Lisätty salasanan kohta

--- a/app/views/suunnitelmat/kayttajaMuokkaus.html
+++ b/app/views/suunnitelmat/kayttajaMuokkaus.html
@@ -12,6 +12,10 @@
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
         <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Matti Meikäläinen">
     </div>    
+    <div class="form-group">
+        <label for="tarkempi_kuvaus">Salasana</label>
+        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="********">
+    </div>    
     
         <div class="checkbox">
         <label>
