--- a/app/views/suunnitelmat/login.html
+++ b/app/views/suunnitelmat/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Kirjaudu sisään</h1>
 
-<a href="#" class="btn btn-default">Rekisteröidy</a>
+<a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
 <form>
 
     <div class="form-group">
