--- a/app/views/suunnitelmat/kayttajat.html
+++ b/app/views/suunnitelmat/kayttajat.html
@@ -2,15 +2,11 @@
 {% block content %}
 <div style="color:green"><h1>Näkymä - käyttäjät</h1></div>
 
-<p>
-    <a href="#" class="btn btn-success">Lisää uusi käyttäjä</a>
-</p>
 
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Nimi</th>
+            <th>Tunnus</th>
             <th>Ikä</th>
         </tr>
     </thead>
@@ -18,12 +14,10 @@
     <tbody>
         <!-- Listataan pelit tähän -->
         <tr>
-            <td>000001</td>
             <td><a href="{{base_path}}/kayttaja">Matti</a></td>
             <td>23</td>
         </tr>
         <tr>
-            <td>000002</td>
             <td><a href="#">Maija</a></td>
             <td>24</td>
         </tr>
