--- a/app/views/suunnitelmat/tyo.html
+++ b/app/views/suunnitelmat/tyo.html
@@ -7,10 +7,16 @@
 </p>
 <!-- Tiedot tulee listana tähän -->
 <ul>
+    <li><strong>ID:</strong><font color='red'> 1</font></li>
     <li><strong>Työn kohde:</strong> <a href="{{base_path}}/tyonkohde"> Jääkaappi</a></li>
     <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokalu"> Rätti</a></li>
-    <li><strong>Suorittaja:</strong><a href="{{base_path}}/kayttaja"> Matti</a></li>
     <li><strong>Tehty: </strong><input type="checkbox"></li>
+</ul>
+<p><strong>Tekijät:</strong></p>
+<ul>
+    
+    <li><a href="{{base_path}}/kayttaja">Matti</a></li>
+    <li><a href="#">Maija</a></li>
 </ul>
 
 <p><strong>Tarkempi kuvaus:</strong> Siivoa jääkaappi, joka löytyy keittiöstä, punaisella rätillä, joka sekin löytyy keittiöstä!</p>
