--- a/app/views/suunnitelmat/tyonkohteet.html
+++ b/app/views/suunnitelmat/tyonkohteet.html
@@ -3,15 +3,13 @@
 <div style="color:green"><h1>Näkymä - Työn kohteet</h1></div>
 
 <p>
-    <a href="#" class="btn btn-success">Lisää työn kohde</a>
+    <a href="{{base_path}}/uusiTyonkohde" class="btn btn-success">Lisää työn kohde</a>
 </p>
 
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>ID</th>
             <th>Kuvaus</th>
-            <th>Viimeisin toimenpide suoritettu</th>
             <th>Lisäyspäivä</th>
         </tr>
     </thead>
@@ -19,10 +17,12 @@
     <tbody>
         <!-- Listataan pelit tähän -->
         <tr>
-            <td>000001</td>
             <td><a href="{{base_path}}/tyonkohde">Jääkaappi</a></td>
             <td>10.09.2017</td>
-            <td>10.09.2017</td>
+        </tr>
+        <tr>
+            <td><a href="#">Olohuone</a></td>
+            <td>15.09.2017</td>
         </tr>
     </tbody>
 </table>
