--- a/app/views/suunnitelmat/tyot.html
+++ b/app/views/suunnitelmat/tyot.html
@@ -3,7 +3,7 @@
 <div style="color:green"><h1>Näkymä - aktiiviset työt</h1></div>
 
 <p>
-    <a href="#" class="btn btn-success">Lisää uusi työ</a>
+    <a href="{{base_path}}/uusiTyo" class="btn btn-success">Lisää uusi työ</a>
 </p>
 
 <table class="table table-striped table-bordered">
@@ -20,13 +20,26 @@
     <tbody>
         <!-- Listataan pelit tähän -->
         <tr>
-            <td>000001</td>
+            <td>1</td>
             <td><a href="{{base_path}}/tyo">Siivoa jääkaappi rätillä</a></td>
             <td><a href="{{base_path}}/tyonkohde">Jääkaappi</td>
             <td><a href="{{base_path}}/tyokalu">Rätti</td>
             <td><div class="checkbox">
                     <label>
-                        <input type="checkbox">
+                        <input type="checkbox" onclick="return false;">
+                        Tehty
+                    </label>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td><a href="#">Imuroi olohuone</a></td>
+            <td><a href="#">Olohuone</td>
+            <td><a href="#">Imuri</td>
+            <td><div class="checkbox">
+                    <label>
+                        <input type="checkbox" onclick="return false;" checked>
                         Tehty
                     </label>
                 </div>
