Korjattu rekisteröitymis sivu

--- a/app/views/suunnitelmat/rekisteroityminen.html
+++ b/app/views/suunnitelmat/rekisteroityminen.html
@@ -11,8 +11,14 @@
     </div>
     <div class="form-group">
         <label for="ika">Ikä</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Anna ikäsi">
+        <input type="text" class="form-control" id="ika" placeholder="Anna ikäsi">
     </div>    
+        
+    <div class="form-group">
+        <label>Tarkempi kuvaus</label>
+        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus itsestäsi">
+    </div>
+    
     <div class="form-group">
         <label for="admin">Tehdäänkö admin tili?</label>
         <input type="checkbox" id="admin">
