--- a/app/views/tyo/tyoKuvaus.html
+++ b/app/views/tyo/tyoKuvaus.html
@@ -14,9 +14,9 @@
     <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokalu"> {{t.tyokalu}}</a></li>
     
               {% if t.tehty %}
-              <li><strong>Tehty: </strong><input type="checkbox" checked=""></li>
+              <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
               {% else %}
-              <li><strong>Tehty: </strong><input type="checkbox"></li>
+              <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
               {% endif %}
           
    
