--- a/app/views/tyokalu/tyokaluKuvaus.html
+++ b/app/views/tyokalu/tyokaluKuvaus.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<div style="color:green"><h1>Rätti</h1></div>
+{% for t in tyokalu %}
+<div style="color:green"><h1>{{t.kuvaus}}</h1></div>
 <p>
     <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyokaluMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
     <ul>
-        <li><strong>Luomispäivä:</strong> 10.09.2017</li>
+        <li><strong>Luomispäivä:</strong> {{t.luotu}}</li>
     </ul>
 
-<p><Strong>Tarkempi kuvaus:</strong> Keittiön kaapista löytyvä punainen rätti</p>
+<p><Strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
+{% endfor%}
 {% endblock %}
