--- a/app/views/tyokalu/tyokalut.html
+++ b/app/views/tyokalu/tyokalut.html
@@ -15,14 +15,12 @@
     </thead>
 
     <tbody>
+        {% for t in tyokalut %}
         <tr>
-            <td><a href="{{base_path}}/tyokalu">Rätti</a></td>
-            <td>10.09.2017</td>
+            <td><a href="{{base_path}}/tyokalu/{{t.kuvaus}}">{{t.kuvaus}}</a></td>
+            <td>{{t.luotu}}</td>
         </tr>
-        <tr>
-            <td><a href="#">Imuri</a></td>
-            <td>15.09.2017</td>
-        </tr>
+        {% endfor %}
     </tbody>
 </table>
 {% endblock %}
