Lisätty työn luominen

--- a/app/views/tyo/tyoKuvaus.html
+++ b/app/views/tyo/tyoKuvaus.html
@@ -15,6 +15,7 @@
     
               {% if t.tehty %}
               <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
+              <li><strong>Suoritusaika: </strong>{{t.suoritusaika}}</li>
               {% else %}
               <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
               {% endif %}
