--- a/app/views/tyo/uusiTyo.html
+++ b/app/views/tyo/uusiTyo.html
@@ -1,31 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+<form method="post" action="{{base_path}}/tyo">
     <div class="form-group">
         <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" id="kuvaus" placeholder="Anna kuvaus">
+        <input type="Text" class="form-control" name="kuvaus" placeholder="Anna kuvaus">
     </div>
     <div class="form-group">
         <label for="kohde">Työn kohde</label>
-        <input type="text" class="form-control" id="kohde" placeholder="Anna työn kohde">
+        <input type="text" class="form-control" name="kohde" placeholder="Anna työn kohde">
     </div>
     <div class="form-group">
         <label for="tyokalu">Työkalu</label>
-        <input type="text" class="form-control" id="tyokalu" placeholder="Anna työkalu">
+        <input type="text" class="form-control" name="tyokalu" placeholder="Anna työkalu">
     </div>
     <p><strong>Tekijät:</strong></p>
     <div class="form-group">
-        <input type="text" class="form-control" id="tekija1" placeholder="tekija1">
-        <input type="text" class="form-control" id="tekija2" placeholder="tekija2">
-        <input type="text" class="form-control" id="tekija3" placeholder="tekija3">
-        <input type="text" class="form-control" id="tekija4" placeholder="tekija4">
-        <input type="text" class="form-control" id="tekija5" placeholder="tekija5">
+        <input type="text" class="form-control" name="tekija1" placeholder="tekija1">
+        <input type="text" class="form-control" name="tekija2" placeholder="tekija2">
+        <input type="text" class="form-control" name="tekija3" placeholder="tekija3">
+        <input type="text" class="form-control" name="tekija4" placeholder="tekija4">
+        <input type="text" class="form-control" name="tekija5" placeholder="tekija5">
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus">
+        <textarea rows="12" cols="20" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus"></textarea>
     </div>    
-    
+    <div class="form-group">
     <button type="submit" class="btn btn-default">Luo</button>
+    </div>
 </form>
 {% endblock %}
