--- a/app/views/tyonKohde/tyonKohdeKuvaus.html
+++ b/app/views/tyonKohde/tyonKohdeKuvaus.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<div style="color:green"><h1>Jääkaappi</h1></div>
-<!-- Painikkeet tähän -->
+{% for t in tyonKohde %}
+<div style="color:green"><h1>{{t.kuvaus}}</h1></div>
 <p>
     <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyonkohdeMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
-<!-- Tiedot tulee listana tähän -->
 <ul>
-    <li><strong>Lisäyspäivä:</strong> 10.09.2017</li>
+    <li><strong>Lisäyspäivä:</strong> {{t.luotu}}</li>
 </ul>
 
-<p><strong>Tarkempi kuvaus:</strong> Keittiöstä löytyvä kaappi, joka pysyy viileänä. Käyttötarkoituksena ruoan säilöminen!</p>
+<p><strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
+{% endfor %}
 {% endblock %}
