Lisätty työn kohteen ja työkalun lisäystoiminto

--- a/app/views/tyo/tyot.html
+++ b/app/views/tyo/tyot.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Näkymä - Aktiiviset työt</h1>
+<div style="color:green"><h1>Näkymä - Työt</h1></div>
 
 <p>
     <a href="{{base_path}}/uusiTyo" class="btn btn-success">Lisää työ</a>
