--- a/app/views/tyonKohde/tyonKohdeKuvaus.html
+++ b/app/views/tyonKohde/tyonKohdeKuvaus.html
@@ -3,7 +3,7 @@
 {% for t in tyonKohde %}
 <div style="color:green"><h1>{{t.kuvaus}}</h1></div>
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyonkohdeMuokkaus" class="btn btn-default">Muokkaa</a>
+    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyonKohdeMuokkaus" class="btn btn-default">Muokkaa</a>
 </p>
 <ul>
     <li><strong>Lisäyspäivä:</strong> {{t.luotu}}</li>
