--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
                         <li><a href="{{base_path}}/tyot">Työt</a></li>
-                        <li><a href="{{base_path}}/tyonkohteet">Työn kohteet</a></li>
+                        <li><a href="{{base_path}}/tyonKohteet">Työn kohteet</a></li>
                         <li><a href="{{base_path}}/tyokalut">Työkalut</a></li>
                         <li><a href="{{base_path}}/kayttajat">Käyttäjät</a></li>
                     </ul>
