--- a/app/views/tyonKohde/tyonKohteet.html
+++ b/app/views/tyonKohde/tyonKohteet.html
@@ -3,7 +3,7 @@
 <div style="color:green"><h1>Näkymä - Työn kohteet</h1></div>
 
 <p>
-    <a href="{{base_path}}/uusiTyonkohde" class="btn btn-success">Lisää työn kohde</a>
+    <a href="{{base_path}}/uusiTyonKohde" class="btn btn-success">Lisää työn kohde</a>
 </p>
 
 <table class="table table-striped table-bordered">
@@ -17,7 +17,7 @@
     <tbody>
         {% for t in tyonKohteet %}
         <tr>
-            <td><a href="{{base_path}}/tyonkohde/{{t.kuvaus}}">{{t.kuvaus}}</a></td>
+            <td><a href="{{base_path}}/tyonKohde/{{t.kuvaus}}">{{t.kuvaus}}</a></td>
             <td>{{t.luotu}}</td>
         </tr>
         
