--- a/app/views/tyonKohde/uusiTyonKohde.html
+++ b/app/views/tyonKohde/uusiTyonKohde.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+<form method="POST" action="{{base_path}}/tyonKohde">
     <div class="form-group">
         <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" id="kuvaus" placeholder="Anna kuvaus">
+        <input type="Text" class="form-control" name="kuvaus" placeholder="Anna kuvaus">
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus">
+        <input type="text" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus">
     </div>    
     
     <button type="submit" class="btn btn-default">Luo</button>
