--- a/app/views/etusivu/rekisteroityminen.html
+++ b/app/views/etusivu/rekisteroityminen.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+<form method="POST" action="{{base_path}}/rekisteroidu">
     <div class="form-group">
         <label for="tunnus">Tunnus</label>
-        <input type="Text" class="form-control" id="kuvaus" placeholder="Anna tunnus">
+        <input type="Text" class="form-control" name="tunnus" placeholder="Anna tunnus">
     </div>
     <div class="form-group">
         <label for="salasana">Salasana</label>
-        <input type="password" class="form-control" id="salasana" placeholder="Anna salasana">
+        <input type="password" class="form-control" name="salasana" placeholder="Anna salasana">
     </div>
     <div class="form-group">
         <label for="ika">Ikä</label>
-        <input type="text" class="form-control" id="ika" placeholder="Anna ikäsi">
+        <input type="text" class="form-control" name="ika" placeholder="Anna ikäsi">
     </div>    
         
     <div class="form-group">
         <label>Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus itsestäsi">
+        <input type="text" class="form-control" name="kuvaus" placeholder="Anna tarkempi kuvaus itsestäsi">
     </div>
     
     <div class="form-group">
         <label for="admin">Tehdäänkö admin tili?</label>
-        <input type="checkbox" id="admin">
+        <input type="checkbox" name="admin">
     </div>    
     
     <button type="submit" class="btn btn-default">Luo</button>
