--- a/app/views/etusivu/rekisteroityminen.html
+++ b/app/views/etusivu/rekisteroityminen.html
@@ -21,7 +21,10 @@
     
     <div class="form-group">
         <label for="admin">Tehdäänkö admin tili?</label>
-        <input type="checkbox" name="admin">
+        <select name="admin">
+            <option value="0">Ei</option>
+            <option value="1">Kyllä</option>
+        </select>
     </div>    
     
     <button type="submit" class="btn btn-default">Luo</button>
