--- a/app/views/tyo/uusiTyo.html
+++ b/app/views/tyo/uusiTyo.html
@@ -7,26 +7,36 @@
     </div>
     <div class="form-group">
         <label for="kohde">Työn kohde</label>
-        <input type="text" class="form-control" name="kohde" placeholder="Anna työn kohde">
+        <!--<input type="text" class="form-control" name="kohde" placeholder="Anna työn kohde">-->
+        <select name="kohde">
+            {% for k in kohteet %}
+            <option value="{{k.kuvaus}}">{{k.kuvaus}}</option>
+            {% endfor %}
+        </select>
     </div>
     <div class="form-group">
         <label for="tyokalu">Työkalu</label>
-        <input type="text" class="form-control" name="tyokalu" placeholder="Anna työkalu">
+        <!--<input type="text" class="form-control" name="tyokalu" placeholder="Anna työkalu">-->
+        <select name="tyokalu">
+            {% for t in tyokalut %}
+            <option value="{{t.kuvaus}}">{{t.kuvaus}}</option>
+            {% endfor %}
+        </select>
     </div>
     <p><strong>Tekijät:</strong></p>
     <div class="form-group">
-        <input type="text" class="form-control" name="tekija1" placeholder="tekija1">
-        <input type="text" class="form-control" name="tekija2" placeholder="tekija2">
-        <input type="text" class="form-control" name="tekija3" placeholder="tekija3">
-        <input type="text" class="form-control" name="tekija4" placeholder="tekija4">
-        <input type="text" class="form-control" name="tekija5" placeholder="tekija5">
+        <select name="tekijat[]" multiple>
+            {% for k in kayttajat %}
+            <option value="{{k.tunnus}}">{{k.tunnus}}</option>
+            {% endfor %}
+        </select>
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
         <textarea rows="12" cols="20" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus"></textarea>
     </div>    
     <div class="form-group">
-    <button type="submit" class="btn btn-default">Luo</button>
+        <button type="submit" class="btn btn-default">Luo</button>
     </div>
 </form>
 {% endblock %}
