--- a/app/views/tyo/tyoKuvaus.html
+++ b/app/views/tyo/tyoKuvaus.html
@@ -30,5 +30,11 @@
     {% endfor %}
 <p><strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
 
+ {% if message != null %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
+
 {% endfor %}
 {% endblock %}
