--- a/app/views/tyo/uusiTyo.html
+++ b/app/views/tyo/uusiTyo.html
@@ -32,6 +32,8 @@
             <option value="{{k.tunnus}}">{{k.tunnus}}</option>
             {% endfor %}
         </select>
+        <br>
+        Voit valita useamman tekijän käyttämällä Ctrl- tai Shift-näppäintä.
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
