--- a/app/views/tyokalu/tyokalut.html
+++ b/app/views/tyokalu/tyokalut.html
@@ -1,10 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 <div style="color:green"><h1>Näkymä - Työkalut</h1></div>
-
+<br>
+<form action="{{base_path}}/etsiTyokalu" method="post">
+    <input list="etsiTyokalu" name="kuvaus">
+    <datalist id="etsiTyokalu">
+        {% for t in tyokalut %}
+        <option value="{{t.kuvaus}}">
+            {% endfor %}
+    </datalist>
+    <input type="submit" value="etsi">
+</form>
+<br>
 <p>
     <a href="{{base_path}}/uusiTyokalu" class="btn btn-success">Lisää työkalu</a>
 </p>
+
 
 <table class="table table-striped table-bordered">
     <thead>
