--- a/app/views/base.html
+++ b/app/views/base.html
@@ -44,6 +44,10 @@
                         <li><a href="{{base_path}}/tyokalut">Työkalut</a></li>
                         <li><a href="{{base_path}}/kayttajat">Käyttäjät</a></li>
                     </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+                        <li><a href="{{base_path}}/rekisteroityminen">Rekisteröidy</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
