--- a/app/views/kayttaja/kayttajat.html
+++ b/app/views/kayttaja/kayttajat.html
@@ -36,4 +36,10 @@
     </tbody>
 </table>
 
+ {% if message != null %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
+
 {% endblock %}
