--- a/app/views/tyo/tyot.html
+++ b/app/views/tyo/tyot.html
@@ -43,4 +43,9 @@
         {% endfor %}
     </tbody>
 </table>
+ {% if message != null %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
 {% endblock %}
