--- a/app/views/tyonKohde/tyonKohteet.html
+++ b/app/views/tyonKohde/tyonKohteet.html
@@ -34,4 +34,10 @@
         {% endfor %}
     </tbody>
 </table>
+
+ {% if message != null %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
 {% endblock %}
