--- a/app/views/tyokalu/uusiTyokalu.html
+++ b/app/views/tyokalu/uusiTyokalu.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
 <form method="POST" action="{{base_path}}/tyokalu">
     <div class="form-group">
         <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" name="kuvaus" placeholder="Anna kuvaus">
+        <input type="Text" class="form-control" name="kuvaus" placeholder="Anna kuvaus" value="{{attributes.kuvaus}}">
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus">
+        <input type="text" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus" value="{{attributes.tarkempi_kuvaus}}">
     </div>    
     
     <button type="submit" class="btn btn-default">Luo</button>
