--- a/app/views/tyokalu/tyokalut.html
+++ b/app/views/tyokalu/tyokalut.html
@@ -36,7 +36,7 @@
     <tbody>
         {% for t in tyokalut %}
         <tr>
-            <td><a href="{{base_path}}/tyokalu/{{t.kuvaus}}">{{t.kuvaus}}</a></td>
+            <td><a href="{{base_path}}/tyokalu/{{t.id}}">{{t.kuvaus}}</a></td>
             <td>{{t.luotu}}</td>
         </tr>
         {% endfor %}
