--- a/app/views/tyonKohde/tyonKohteet.html
+++ b/app/views/tyonKohde/tyonKohteet.html
@@ -35,7 +35,7 @@
     <tbody>
         {% for t in tyonKohteet %}
         <tr>
-            <td><a href="{{base_path}}/tyonKohde/{{t.kuvaus}}">{{t.kuvaus}}</a></td>
+            <td><a href="{{base_path}}/tyonKohde/{{t.id}}">{{t.kuvaus}}</a></td>
             <td>{{t.luotu}}</td>
         </tr>
         
