Korjattu työn luominen

--- a/app/views/kayttaja/kayttajat.html
+++ b/app/views/kayttaja/kayttajat.html
@@ -14,7 +14,7 @@
 
 {% if message != null %}
 <br>
-<div class="alert alert-success">
+<div class="alert alert-danger">
     {{message}}
 </div>
 {% endif %}
