--- a/app/views/tyo/tyot.html
+++ b/app/views/tyo/tyot.html
@@ -14,7 +14,7 @@
 
 {% if message != null %}
 <br>
-<div class="alert alert-success">
+<div class="alert alert-danger">
     {{message}}
 </div>
 {% endif %}
