Korjattu työn muokkauksen attribuutit

--- a/app/views/tyo/tyoMuokkaus.html
+++ b/app/views/tyo/tyoMuokkaus.html
@@ -1,32 +1,78 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+<form method="post" action="{{base_path}}/tyonMuokkaaminen/{{attributes.id}}">
     <div class="form-group">
         <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" id="kuvaus" placeholder="Siivoa jääkaappi rätillä">
+        <input type="Text" class="form-control" name="kuvaus" value="{{attributes.kuvaus}}">
     </div>
     <div class="form-group">
         <label for="kohde">Työn kohde</label>
-        <input type="text" class="form-control" id="kohde" placeholder="Jääkaappi">
+        <br>
+        <select name="kohde">
+            {% for k in kohteet %}
+            {% if k.kuvaus == attributes.kohde %}
+            <option value="{{k.kuvaus}}" selected="selected">{{k.kuvaus}}</option>
+            {% else %}
+            <option value="{{k.kuvaus}}">{{k.kuvaus}}</option>            
+            {% endif %}
+
+            {% endfor %}
+        </select>
     </div>
     <div class="form-group">
         <label for="tyokalu">Työkalu</label>
-        <input type="text" class="form-control" id="tyokalu" placeholder="Rätti">
+        <br>
+        <select name="tyokalu">
+            {% for t in tyokalut %}
+            {% if t.kuvaus == attributes.tyokalu %}
+            <option value="{{t.kuvaus}}" selected="selected">{{t.kuvaus}}</option>
+            {% else %}
+            <option value="{{t.kuvaus}}">{{t.kuvaus}}</option>            
+            {% endif %}
+            {% endfor %}
+        </select>
     </div>
+    <p><strong>Tekijät:</strong></p>
     <div class="form-group">
-        <label for="tekija">Tekijä</label>
-        <input type="text" class="form-control" id="tekija" placeholder="Matti">
+        <select name="tekijat[]" size="5" multiple>
+
+            {% for k in kayttajat %}
+            {% if k.tunnus in attributes.tekijat %}
+            <option value="{{k.tunnus}}" selected="selected">{{k.tunnus}}</option>
+            {% else %}
+            <option value="{{k.tunnus}}">{{k.tunnus}}</option>            
+            {% endif %}
+
+            {% endfor %}
+        </select>
+        <br>
+        Voit valita useamman tekijän käyttämällä Ctrl- tai Shift-näppäintä.
     </div>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Tehty
-        </label>
-    </div>
+
+    {% if attributes.tehty %}
+    <strong>Tehty: </strong><input type="checkbox" name="tehty" checked>
+    <strong>Suoritusaika: </strong>{{attributes.suoritusaika}}
+    {% else %}
+    <strong>Tehty: </strong><input type="checkbox" name="tehty">
+    {% endif %}
+
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Siivoa jääkaappi, joka löytyy keittiöstä, punaisella rätillä, joka sekin löytyy keittiöstä!">
+        <textarea rows="12" cols="20" class="form-control" name="tarkempi_kuvaus" value="{{attributes.tarkempi_kuvaus}}">{{attributes.tarkempi_kuvaus}}</textarea>
     </div>    
-    
-    <button type="submit" class="btn btn-default">Muuta</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-default">Muokkaa</button>
+    </div>
 </form>
 {% endblock %}
