--- a/app/views/tyokalu/tyokaluKuvaus.html
+++ b/app/views/tyokalu/tyokaluKuvaus.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+
 {% for t in tyokalu %}
 <div style="color:green"><h1>{{t.kuvaus}}</h1></div>
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyokaluMuokkaus" class="btn btn-default">Muokkaa</a>
+    <a href="{{base_path}}/tyokaluPoisto/{{t.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyokaluMuokkaus/{{t.id}}" class="btn btn-default">Muokkaa</a>
 </p>
     <ul>
         <li><strong>Luomispäivä:</strong> {{t.luotu}}</li>
