--- a/app/views/tyonKohde/tyonKohdeKuvaus.html
+++ b/app/views/tyonKohde/tyonKohdeKuvaus.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
 {% for t in tyonKohde %}
 <div style="color:green"><h1>{{t.kuvaus}}</h1></div>
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tyonKohdeMuokkaus" class="btn btn-default">Muokkaa</a>
+    <a href="{{base_path}}/tyonKohdePoisto/{{t.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyonKohdeMuokkaus/{{t.id}}" class="btn btn-default">Muokkaa</a>
 </p>
 <ul>
     <li><strong>Lisäyspäivä:</strong> {{t.luotu}}</li>
