--- a/app/views/kayttaja/kayttajaMuokkaus.html
+++ b/app/views/kayttaja/kayttajaMuokkaus.html
@@ -1,28 +1,40 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+<form method="post" action="{{base_path}}/kayttajaMuokkaaminen/{{attributes.tunnus}}">
     <div class="form-group">
-        <label for="tunnus">Matti</label>
+        <label>{{attributes.tunnus}}</label>
     </div>
     <div class="form-group">
         <label for="ika">Ikä</label>
-        <input type="text" class="form-control" id="ika" placeholder="23">
+        <input type="text" class="form-control" name="ika" value="{{attributes.ika}}">
     </div>    
     <div class="form-group">
-        <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="Matti Meikäläinen">
+        <label for="kuvaus">Tarkempi kuvaus</label>
+        <input type="text" class="form-control" name="kuvaus" value="{{attributes.kuvaus}}">
     </div>    
     <div class="form-group">
-        <label for="tarkempi_kuvaus">Salasana</label>
-        <input type="text" class="form-control" id="tarkempi_kuvaus" placeholder="********">
+        <label for="salasana">Salasana</label>
+        <input type="text" class="form-control" name="salasana" value="{{attributes.salasana}}">
     </div>    
     
-        <div class="checkbox">
-        <label>
-            <input type="checkbox" checked> Admin
-        </label>
-    </div>
-    
+    {% if attributes.admin %}
+    <strong>Admin: </strong><input type="checkbox" name="admin" checked>
+    {% else %}
+    <strong>Admin: </strong><input type="checkbox" name="admin">
+    {% endif %}
+    <br>
+    <br>
     <button type="submit" class="btn btn-default">Muuta</button>
 </form>
 {% endblock %}
