--- a/app/views/etusivu/etusivu.html
+++ b/app/views/etusivu/etusivu.html
@@ -1,10 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if user_logged_in %}
+
+<div style="color:green">
+<h1>Tervetuloa {{user_logged_in.tunnus}}!</h1>
+</div>
+
+
+
+
+{% else %}
 <div style="color:green">
 <h1>Tervetuloa työnjakajaan!</h1>
 </div>
+
+ {% if message %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
+  
 <p> Työnjakajalla voit helposti jakaa esimerkiksi kotitaloutesi kotityöt perheen kesken!</p>
 <p> <a href="{{base_path}}/login">Kirjaudu sisään</a> ja aloita käyttö!</p>
 
 <a href="{{base_path}}/login" class="btn btn-primary">Kirjaudu</a><a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
+
+{% endif %}
+  
 {% endblock %}
