--- a/app/views/etusivu/login.html
+++ b/app/views/etusivu/login.html
@@ -2,18 +2,24 @@
 {% block content %}
 <h1>Kirjaudu sisään</h1>
 
+{% if error %}
+<div class="alert alert-danger">
+    <label>{{error}}</label>
+</div>
+{% endif %}
+
 <a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
-<form>
+<form method="post" action="{{base_path}}/logging">
 
     <div class="form-group">
         <label>Käyttäjätunnus</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="tunnus" value="{{tunnus}}">
     </div>
 
 
     <div class="form-group">
         <label>Salasana</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" name="salasana">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
