--- a/app/views/tyokalu/tyokaluKuvaus.html
+++ b/app/views/tyokalu/tyokaluKuvaus.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in.admin %}
+
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -29,4 +31,36 @@
 </div>
   {% endif %}
 {% endfor%}
+
+{% else %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+
+{% for t in tyokalu %}
+<div style="color:green"><h1>{{t.kuvaus}}</h1></div>
+
+    <ul>
+        <li><strong>Luomispäivä:</strong> {{t.luotu}}</li>
+    </ul>
+
+<p><Strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
+
+ {% if message != null %}
+<div class="alert alert-success">
+  {{message}}
+</div>
+  {% endif %}
+{% endfor%}
+
+{% endif %}
+
 {% endblock %}
